# benkio

./: .gitignore  NOTE.md  README.md  TODO.md  dev.sh  init.sh  package.json
shared/schemas/: flashcard.schema.json  review.schema.json
src/: App.tsx  generate-types.ts  main.tsx
src-tauri/: .env  .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/2024-08-06-200737_flashcards/: up.sql
src-tauri/migrations/2024-08-06-205733_reviews/: up.sql
src-tauri/migrations/2024-09-04-171758_levels/: down.sql  up.sql
src-tauri/resources/kana/: hiragana.json  katakana.json
src-tauri/src/: db.rs  flashcard.rs  lib.rs  main.rs  models.rs  schema.rs  schema.sql
src/components/: AppBar.tsx  Flashcard.tsx  FlashcardComponent.tsx  Light.tsx
src/models/: flashcard.d.ts  review.d.ts
src/screens/: CatFriends.tsx  ErrorScreen.tsx  FlashcardScreen.tsx  HomeScreen.tsx  KanaScreen.tsx
