[package]
name = "voxab"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voxab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34.7"
log = "0.4.22"
fsrs = "1.1.4"
burn-tensor = "0.13.2"
burn = { version = "0.13.2", features = ["wgpu"] }
lazy_static = "1.5.0"

