[package]
name = "voxab"
version = "0.0.1"
description = "A mobile app for language learning."
authors = ["gxjb"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voxab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
log = "0.4.22"
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.0", features = ["sqlite", "chrono", "runtime-tokio"] }
rand = "0.8.5"
